employee login view page added in dashboard

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
   </head>
 
   <body>
-    <%= yield %>
+  <%= render partial: "/home/header" %>
+  <%= render partial: "/home/sidebar" %>
+  <%= yield %>
+  <%= render partial: "/home/footer" %>
   </body>
 </html>
