--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,9 +9,6 @@
   <header class="topbar" data-navbarbg="skin5">
       <nav class="navbar top-navbar navbar-expand-md navbar-dark">
           <div class="navbar-header" data-logobg="skin6">
-              <!-- ============================================================== -->
-              <!-- Logo -->
-              <!-- ============================================================== -->
               <a class="navbar-brand" href="home">
                   <!-- Logo icon -->
                   <b class="logo-icon">
@@ -99,7 +96,7 @@
                   </li>
                   <li class="sidebar-item">
                   <%= link_to destroy_employee_session_path, method: :delete , :class=> 'sidebar-link waves-effect waves-dark sidebar-link' do %>
-                          <i class="fa fa-table" aria-hidden="true"></i>
+                          <i class="fas fa-sign-out-alt" aria-hidden="true"></i>
                           <span class="hide-menu">Sign Out</span>
                       <% end %>
                   </li>
@@ -158,16 +155,6 @@
               <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
                   <h4 class="page-title">Home</h4>
               </div>
-              <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
-                  <div class="d-md-flex">
-                      <ol class="breadcrumb ms-auto">
-                          <li><a href="home" class="fw-normal">Home</a></li>
-                      </ol>
-                      <a href="https://www.wrappixel.com/templates/ampleadmin/" target="_blank"
-                          class="btn btn-danger  d-none d-md-block pull-right ms-3 hidden-xs hidden-sm waves-effect waves-light text-white">Upgrade
-                          to Pro</a>
-                  </div>
-              </div>
           </div>
           <!-- /.col-lg-12 -->
       </div>
@@ -178,161 +165,7 @@
       <!-- Container fluid  -->
       <!-- ============================================================== -->
       <div class="container-fluid">
-          <!-- ============================================================== -->
-          <!-- Three charts -->
-          <!-- ============================================================== -->
-          <div class="row justify-content-center">
-              <div class="col-lg-4 col-md-12">
-                  <div class="white-box analytics-info">
-                      <h3 class="box-title">Total Visit</h3>
-                      <ul class="list-inline two-part d-flex align-items-center mb-0">
-                          <li>
-                              <div id="sparklinedash"><canvas width="67" height="30"
-                                      style="display: inline-block; width: 67px; height: 30px; vertical-align: top;"></canvas>
-                              </div>
-                          </li>
-                          <li class="ms-auto"><span class="counter text-success">659</span></li>
-                      </ul>
-                  </div>
-              </div>
-              <div class="col-lg-4 col-md-12">
-                  <div class="white-box analytics-info">
-                      <h3 class="box-title">Total Page Views</h3>
-                      <ul class="list-inline two-part d-flex align-items-center mb-0">
-                          <li>
-                              <div id="sparklinedash2"><canvas width="67" height="30"
-                                      style="display: inline-block; width: 67px; height: 30px; vertical-align: top;"></canvas>
-                              </div>
-                          </li>
-                          <li class="ms-auto"><span class="counter text-purple">869</span></li>
-                      </ul>
-                  </div>
-              </div>
-              <div class="col-lg-4 col-md-12">
-                  <div class="white-box analytics-info">
-                      <h3 class="box-title">Unique Visitor</h3>
-                      <ul class="list-inline two-part d-flex align-items-center mb-0">
-                          <li>
-                              <div id="sparklinedash3"><canvas width="67" height="30"
-                                      style="display: inline-block; width: 67px; height: 30px; vertical-align: top;"></canvas>
-                              </div>
-                          </li>
-                          <li class="ms-auto"><span class="counter text-info">911</span>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-          <!-- ============================================================== -->
-          <!-- PRODUCTS YEARLY SALES -->
-          <!-- ============================================================== -->
-          <div class="row">
-              <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-                  <div class="white-box">
-                      <h3 class="box-title">Products Yearly Sales</h3>
-                      <div class="d-md-flex">
-                          <ul class="list-inline d-flex ms-auto">
-                              <li class="ps-3">
-                                  <h5><i class="fa fa-circle me-1 text-info"></i>Mac</h5>
-                              </li>
-                              <li class="ps-3">
-                                  <h5><i class="fa fa-circle me-1 text-inverse"></i>Windows</h5>
-                              </li>
-                          </ul>
-                      </div>
-                      <div id="ct-visits" style="height: 405px;">
-                          <div class="chartist-tooltip" style="top: -17px; left: -12px;"><span
-                                  class="chartist-tooltip-value">6</span>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <!-- ============================================================== -->
-          <!-- RECENT SALES -->
-          <!-- ============================================================== -->
-          <div class="row">
-              <div class="col-md-12 col-lg-12 col-sm-12">
-                  <div class="white-box">
-                      <div class="d-md-flex mb-3">
-                          <h3 class="box-title mb-0">Recent sales</h3>
-                          <div class="col-md-3 col-sm-4 col-xs-6 ms-auto">
-                              <select class="form-select shadow-none row border-top">
-                                  <option>March 2021</option>
-                                  <option>April 2021</option>
-                                  <option>May 2021</option>
-                                  <option>June 2021</option>
-                                  <option>July 2021</option>
-                              </select>
-                          </div>
-                      </div>
-                      <div class="table-responsive">
-                          <table class="table no-wrap">
-                              <thead>
-                                  <tr>
-                                      <th class="border-top-0">#</th>
-                                      <th class="border-top-0">Name</th>
-                                      <th class="border-top-0">Status</th>
-                                      <th class="border-top-0">Date</th>
-                                      <th class="border-top-0">Price</th>
-                                  </tr>
-                              </thead>
-                              <tbody>
-                                  <tr>
-                                      <td>1</td>
-                                      <td class="txt-oflo">Elite admin</td>
-                                      <td>SALE</td>
-                                      <td class="txt-oflo">April 18, 2021</td>
-                                      <td><span class="text-success">$24</span></td>
-                                  </tr>
-                                  <tr>
-                                      <td>2</td>
-                                      <td class="txt-oflo">Real Homes WP Theme</td>
-                                      <td>EXTENDED</td>
-                                      <td class="txt-oflo">April 19, 2021</td>
-                                      <td><span class="text-info">$1250</span></td>
-                                  </tr>
-                                  <tr>
-                                      <td>3</td>
-                                      <td class="txt-oflo">Ample Admin</td>
-                                      <td>EXTENDED</td>
-                                      <td class="txt-oflo">April 19, 2021</td>
-                                      <td><span class="text-info">$1250</span></td>
-                                  </tr>
-                                  <tr>
-                                      <td>4</td>
-                                      <td class="txt-oflo">Medical Pro WP Theme</td>
-                                      <td>TAX</td>
-                                      <td class="txt-oflo">April 20, 2021</td>
-                                      <td><span class="text-danger">-$24</span></td>
-                                  </tr>
-                                  <tr>
-                                      <td>5</td>
-                                      <td class="txt-oflo">Hosting press html</td>
-                                      <td>SALE</td>
-                                      <td class="txt-oflo">April 21, 2021</td>
-                                      <td><span class="text-success">$24</span></td>
-                                  </tr>
-                                  <tr>
-                                      <td>6</td>
-                                      <td class="txt-oflo">Digital Agency PSD</td>
-                                      <td>SALE</td>
-                                      <td class="txt-oflo">April 23, 2021</td>
-                                      <td><span class="text-danger">-$14</span></td>
-                                  </tr>
-                                  <tr>
-                                      <td>7</td>
-                                      <td class="txt-oflo">Helping Hands WP Theme</td>
-                                      <td>MEMBER</td>
-                                      <td class="txt-oflo">April 22, 2021</td>
-                                      <td><span class="text-success">$64</span></td>
-                                  </tr>
-                              </tbody>
-                          </table>
-                      </div>
-                  </div>
-              </div>
-          </div>
+         
           <!-- ============================================================== -->
           <!-- Recent Comments -->
           <!-- ============================================================== -->
