--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -101,10 +101,10 @@
                       <% end %>
                   </li>
                   <li class="sidebar-item">
-                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="fontawesome.html"
+                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="<%= menus_path %>"
                           aria-expanded="false">
-                          <i class="fa fa-font" aria-hidden="true"></i>
-                          <span class="hide-menu">Icon</span>
+                          <i class="fas fa-columns" aria-hidden="true"></i>
+                          <span class="hide-menu">Menu</span>
                       </a>
                   </li>
                   <li class="sidebar-item">
