--- a/app/views/food_items/new.html.erb
+++ b/app/views/food_items/new.html.erb
@@ -115,18 +115,37 @@
           <div class="row">
               <div class="col-md-12">
                   <div class="card white-box p-0">
-                    <h3><%= Menu.first.title %></h3>
-                    <h3><%= Menu.second.title %></h3>
-                    <h3><%= Menu.third.title %></h3>
-                    <br>  
-                    <h4><%= Category.first.title %></h4>
-                    <h4><%= Category.second.title %></h4>
-                    <h4><%= Category.third.title %></h4>
-                    <br>
-                    <h5><%= FoodItem.first.name %>  <%= FoodItem.first.price %> <%= "Pkr" %></h5>
-                    <h5><%= FoodItem.second.name %>  <%= FoodItem.second.price%> <%= "Pkr" %></h5>
-                    <br>
-                    <%= link_to "Add Menu", new_menu_path %>
+                  <br>
+                  <div class="col-lg-5 mx-lg-auto">
+                    <div class="card shadow">
+                      <div class="card-header">
+                        <h2 class="card-title text-center">Add Food Item</h2>
+                      </div>
+                      <div class="card-body">
+                  
+                        <%= form_for @food_item do |f| %>
+                          <div class="form-group">
+                            <%= f.label :name, class: 'mb-2' %>
+                            <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control form-control-lg" %>
+                          </div>
+                          <div class="form-group">
+                          <%= f.label :price, class: 'mb-2' %>
+                          <%= f.text_field :price, autofocus: true, autocomplete: "price", class: "form-control form-control-lg" %>
+                        </div>
+                          <div class="form-group">
+                          <%= f.label :category_id, class: 'mb-2' %>
+                          <%= f.text_field :category_id, autofocus: true, autocomplete: "category_id", class: "form-control form-control-lg" %>
+                        </div><br>
+                          <div class="actions">
+                            <%= f.submit "Submit", class: "btn btn-primary btn-lg" %>
+                          </div>
+                        <% end %>
+                  
+                        <br> <%= link_to "Back", new_category_path %>
+                      </div>
+                    </div>
+                  </div>
+                  
                   </div>
               </div>
           </div>
