--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -1,21 +1,156 @@
-<br>
-<div class="col-lg-5 mx-lg-auto">
-  <div class="card shadow">
-    <div class="card-header">
-      <h2 class="card-title text-center">Add Menu</h2>
-    </div>
-    <div class="card-body">
 
-      <%= form_for @menu do |f| %>
-        <div class="form-group">
-          <%= f.label :title, class: 'mb-2' %>
-          <%= f.text_field :title, autofocus: true, autocomplete: "title", class: "form-control form-control-lg" %>
-        </div>
-        <div class="actions">
-          <%= f.submit "Submit", class: "btn btn-primary btn-lg" %>
-        </div>
-      <% end %>
+<div id="main-wrapper" data-layout="vertical" data-navbarbg="skin5" data-sidebartype="full"
+  data-sidebar-position="absolute" data-header-position="absolute" data-boxed-layout="full">
+  <header class="topbar" data-navbarbg="skin5">
+      <nav class="navbar top-navbar navbar-expand-md navbar-dark">
+          <div class="navbar-header" data-logobg="skin6">
+              <a class="navbar-brand" href="home">
+                  <!-- Logo icon -->
+                  <b class="logo-icon">
+                      <!-- Dark Logo icon -->
+                      <img src="assets/plugins/images/logo-icon.png" alt="homepage" />
+                  </b>
+                  <!--End Logo icon -->
+                  <!-- Logo text -->
+                  <span class="logo-text">
+                      <!-- dark Logo text -->
+                      <img src="assets/plugins/images/logo-text.png" alt="homepage" />
+                  </span>
+              </a>
+              <a class="nav-toggler waves-effect waves-light text-dark d-block d-md-none"
+                  href="javascript:void(0)"><i class="ti-menu ti-close"></i></a>
+          </div>
+          <div class="navbar-collapse collapse" id="navbarSupportedContent" data-navbarbg="skin5">
+              <ul class="navbar-nav ms-auto d-flex align-items-center">
+                  <li class=" in">
+                      <form role="search" class="app-search d-none d-md-block me-3">
+                          <input type="text" placeholder="Search..." class="form-control mt-0">
+                          <a href="" class="active">
+                              <i class="fa fa-search"></i>
+                          </a>
+                      </form>
+                  </li>
+                  <li>
+                      <a class="profile-pic" href="#">
+                          <img src="assets/plugins/images/users/varun.jpg" alt="user-img" width="36"
+                              class="img-circle"><span class="text-white font-medium"><% if employee_signed_in? %><%= current_employee.email %><% end %></span></a>
+                  </li>
+              </ul>
+          </div>
+      </nav>
+  </header>
 
-    </div>
+  <aside class="left-sidebar" data-sidebarbg="skin6">
+      <!-- Sidebar scroll-->
+      <div class="scroll-sidebar">
+          <!-- Sidebar navigation-->
+          <nav class="sidebar-nav">
+              <ul id="sidebarnav">
+                  <!-- User Profile-->
+                  <li class="sidebar-item pt-2">
+                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="home"
+                          aria-expanded="false">
+                          <i class="far fa-clock" aria-hidden="true"></i>
+                          <span class="hide-menu">Home</span>
+                      </a>
+                  </li>
+                  <li class="sidebar-item">
+                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="<%= new_employee_session_path %>"
+                          aria-expanded="false">
+                          <i class="fa fa-user" aria-hidden="true"></i>
+                          <span class="hide-menu">Sign In</span>
+                      </a>
+                  </li>
+                  <li class="sidebar-item">
+                  <%= link_to destroy_employee_session_path, method: :delete , :class=> 'sidebar-link waves-effect waves-dark sidebar-link' do %>
+                          <i class="fas fa-sign-out-alt" aria-hidden="true"></i>
+                          <span class="hide-menu">Sign Out</span>
+                      <% end %>
+                  </li>
+                  <li class="sidebar-item">
+                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="<%= menus_path %>"
+                          aria-expanded="false">
+                          <i class="fas fa-columns" aria-hidden="true"></i>
+                          <span class="hide-menu">Menu</span>
+                      </a>
+                  </li>
+                  <li class="sidebar-item">
+                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="map-google.html"
+                          aria-expanded="false">
+                          <i class="fa fa-globe" aria-hidden="true"></i>
+                          <span class="hide-menu">Google Map</span>
+                      </a>
+                  </li>
+                  <li class="sidebar-item">
+                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="blank.html"
+                          aria-expanded="false">
+                          <i class="fa fa-columns" aria-hidden="true"></i>
+                          <span class="hide-menu">Blank Page</span>
+                      </a>
+                  </li>
+                  <li class="sidebar-item">
+                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="404.html"
+                          aria-expanded="false">
+                          <i class="fa fa-info-circle" aria-hidden="true"></i>
+                          <span class="hide-menu">Error 404</span>
+                      </a>
+                  </li>
+                  <li class="text-center p-20 upgrade-btn">
+                      <a href="https://www.wrappixel.com/templates/ampleadmin/"
+                          class="btn d-grid btn-danger text-white" target="_blank">
+                          Upgrade to Pro</a>
+                  </li>
+              </ul>
+          </nav>
+      </div>
+  </aside>
+  <div class="page-wrapper">
+      <div class="page-breadcrumb bg-white">
+          <div class="row align-items-center">
+              <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
+                  <h4 class="page-title">Menu</h4>
+              </div>
+          </div>
+      </div>
+      <div class="container-fluid">
+          <div class="row">
+              <div class="col-md-12">
+                  <div class="card white-box p-0">
+                  <br>
+                  <div class="col-lg-5 mx-lg-auto">
+                    <div class="card shadow">
+                      <div class="card-header">
+                        <h2 class="card-title text-center">Add Menu</h2>
+                      </div>
+                      <div class="card-body">
+                  
+                        <%= form_for @menu do |f| %>
+                          <div class="form-group">
+                            <%= f.label :title, class: 'mb-2' %>
+                            <%= f.text_field :title, autofocus: true, autocomplete: "title", class: "form-control form-control-lg" %>
+                          </div>
+                          <div class="form-group">
+                          <%= f.label :resturant_id, class: 'mb-2' %>
+                          <%= f.text_field :resturant_id, autofocus: true, autocomplete: "resturant_id", class: "form-control form-control-lg" %>
+
+                        </div><br>
+                          <div class="actions">
+                            <%= f.submit "Submit", class: "btn btn-primary btn-lg" %>
+                          </div>
+                        <% end %>
+                          
+                        <br><%= link_to "Add Category", new_category_path %>
+                        <br><%= link_to "back", menus_path %>
+                      </div>
+                    </div>
+                  </div>
+                  
+                  </div>
+              </div>
+          </div>
+      </div>
+      <footer class="footer text-center"> 2021 © Ample Admin brought to you by <a
+              href="https://www.wrappixel.com/">wrappixel.com</a>
+      </footer>
   </div>
 </div>
