--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,253 +1,9 @@
-<div id="main-wrapper" data-layout="vertical" data-navbarbg="skin5" data-sidebartype="full"
-  data-sidebar-position="absolute" data-header-position="absolute" data-boxed-layout="full">
-  <header class="topbar" data-navbarbg="skin5">
-      <nav class="navbar top-navbar navbar-expand-md navbar-dark">
-          <div class="navbar-header" data-logobg="skin6">
-              <a class="nav-toggler waves-effect waves-light text-dark d-block d-md-none"
-                  href="javascript:void(0)"><i class="ti-menu ti-close"></i></a>
-          </div>
-          <div class="navbar-collapse collapse" id="navbarSupportedContent" data-navbarbg="skin5">
-              <ul class="navbar-nav ms-auto d-flex align-items-center">
-                  <li class=" in">
-                      <form role="search" class="app-search d-none d-md-block me-3">
-                          <input type="text" placeholder="Search..." class="form-control mt-0">
-                          <a href="" class="active">
-                              <i class="fa fa-search"></i>
-                          </a>
-                      </form>
-                  </li>
-                  <li>
-                      <span class="text-white font-medium"><% if employee_signed_in? %><%= current_employee.email %><% end %></span></a>
-                  </li>
-              </ul>
-          </div>
-      </nav>
-  </header>
-
-  <aside class="left-sidebar" data-sidebarbg="skin6">
-      <!-- Sidebar scroll-->
-      <div class="scroll-sidebar">
-          <!-- Sidebar navigation-->
-          <nav class="sidebar-nav">
-              <ul id="sidebarnav">
-                  <!-- User Profile-->
-                  <li class="sidebar-item pt-2">
-                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="home"
-                          aria-expanded="false">
-                          <i class="far fa-clock" aria-hidden="true"></i>
-                          <span class="hide-menu">Home</span>
-                      </a>
-                  </li>
-                  <li class="sidebar-item">
-                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="<%= new_employee_session_path %>"
-                          aria-expanded="false">
-                          <i class="fa fa-user" aria-hidden="true"></i>
-                          <span class="hide-menu">Sign In</span>
-                      </a>
-                  </li>
-                  <li class="sidebar-item">
-                  <%= link_to destroy_employee_session_path, method: :delete , :class=> 'sidebar-link waves-effect waves-dark sidebar-link' do %>
-                          <i class="fas fa-sign-out-alt" aria-hidden="true"></i>
-                          <span class="hide-menu">Sign Out</span>
-                      <% end %>
-                  </li>
-                  <li class="sidebar-item">
-                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="<%= new_menu_path %>"
-                          aria-expanded="false">
-                          <i class="fas fa-columns" aria-hidden="true"></i>
-                          <span class="hide-menu">Menu</span>
-                      </a>
-                  </li>
-                  <li class="sidebar-item">
-                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="<%= new_category_path %>"
-                          aria-expanded="false">
-                          <i class="fab fa-readme" aria-hidden="true"></i>
-                          <span class="hide-menu">Category</span>
-                      </a>
-                  </li>
-                  <li class="sidebar-item">
-                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="<%= new_food_item_path %>"
-                          aria-expanded="false">
-                          <i class="fas fa-coffee" aria-hidden="true"></i>
-                          <span class="hide-menu">Food Item</span>
-                      </a>
-                  </li>
-              </ul>
-          </nav>
+<div class="page-wrapper">
+  <div class="container-fluid">
+    <div class="col-md-12">
+      <div class="card white-box p-0">
+        <h2>Home page</h2>
       </div>
-  </aside>
-  <div class="page-wrapper">
-      <div class="container-fluid">
-          <div class="row">
-              <!-- .col -->
-              <div class="col-md-12 col-lg-8 col-sm-12">
-                  <div class="card white-box p-0">
-                      <div class="card-body">
-                          <h3 class="box-title mb-0">Recent Comments</h3>
-                      </div>
-                      <div class="comment-widgets">
-                          <!-- Comment Row -->
-                          <div class="d-flex flex-row comment-row p-3 mt-0">
-                              <div class="p-2"><img src="assets/plugins/images/users/varun.jpg" alt="user" width="50" class="rounded-circle"></div>
-                              <div class="comment-text ps-2 ps-md-3 w-100">
-                                  <h5 class="font-medium">James Anderson</h5>
-                                  <span class="mb-3 d-block">Lorem Ipsum is simply dummy text of the printing and type setting industry.It has survived not only five centuries. </span>
-                                  <div class="comment-footer d-md-flex align-items-center">
-                                        <span class="badge bg-primary rounded">Pending</span>
-                                        
-                                      <div class="text-muted fs-2 ms-auto mt-2 mt-md-0">April 14, 2021</div>
-                                  </div>
-                              </div>
-                          </div>
-                          <!-- Comment Row -->
-                          <div class="d-flex flex-row comment-row p-3">
-                              <div class="p-2"><img src="assets/plugins/images/users/genu.jpg" alt="user" width="50" class="rounded-circle"></div>
-                              <div class="comment-text ps-2 ps-md-3 active w-100">
-                                  <h5 class="font-medium">Michael Jorden</h5>
-                                  <span class="mb-3 d-block">Lorem Ipsum is simply dummy text of the printing and type setting industry.It has survived not only five centuries. </span>
-                                  <div class="comment-footer d-md-flex align-items-center">
-
-                                      <span class="badge bg-success rounded">Approved</span>
-                                      
-                                      <div class="text-muted fs-2 ms-auto mt-2 mt-md-0">April 14, 2021</div>
-                                  </div>
-                              </div>
-                          </div>
-                          <!-- Comment Row -->
-                          <div class="d-flex flex-row comment-row p-3">
-                              <div class="p-2"><img src="assets/plugins/images/users/ritesh.jpg" alt="user" width="50" class="rounded-circle"></div>
-                              <div class="comment-text ps-2 ps-md-3 w-100">
-                                  <h5 class="font-medium">Johnathan Doeting</h5>
-                                  <span class="mb-3 d-block">Lorem Ipsum is simply dummy text of the printing and type setting industry.It has survived not only five centuries. </span>
-                                  <div class="comment-footer d-md-flex align-items-center">
-
-                                      <span class="badge rounded bg-danger">Rejected</span>
-                                      
-                                      <div class="text-muted fs-2 ms-auto mt-2 mt-md-0">April 14, 2021</div>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-lg-4 col-md-12 col-sm-12">
-                  <div class="card white-box p-0">
-                      <div class="card-heading">
-                          <h3 class="box-title mb-0">Chat Listing</h3>
-                      </div>
-                      <div class="card-body">
-                          <ul class="chatonline">
-                              <li>
-                                  <div class="call-chat">
-                                      <button class="btn btn-success text-white btn-circle btn" type="button">
-                                          <i class="fas fa-phone"></i>
-                                      </button>
-                                      <button class="btn btn-info btn-circle btn" type="button">
-                                          <i class="far fa-comments text-white"></i>
-                                      </button>
-                                  </div>
-                                  <a href="javascript:void(0)" class="d-flex align-items-center"><img
-                                          src="assets/plugins/images/users/varun.jpg" alt="user-img" class="img-circle">
-                                      <div class="ms-2">
-                                          <span class="text-dark">Varun Dhavan <small
-                                                  class="d-block text-success d-block">online</small></span>
-                                      </div>
-                                  </a>
-                              </li>
-                              <li>
-                                  <div class="call-chat">
-                                      <button class="btn btn-success text-white btn-circle btn" type="button">
-                                          <i class="fas fa-phone"></i>
-                                      </button>
-                                      <button class="btn btn-info btn-circle btn" type="button">
-                                          <i class="far fa-comments text-white"></i>
-                                      </button>
-                                  </div>
-                                  <a href="javascript:void(0)" class="d-flex align-items-center"><img
-                                          src="assets/plugins/images/users/genu.jpg" alt="user-img" class="img-circle">
-                                      <div class="ms-2">
-                                          <span class="text-dark">Genelia
-                                              Deshmukh <small class="d-block text-warning">Away</small></span>
-                                      </div>
-                                  </a>
-                              </li>
-                              <li>
-                                  <div class="call-chat">
-                                      <button class="btn btn-success text-white btn-circle btn" type="button">
-                                          <i class="fas fa-phone"></i>
-                                      </button>
-                                      <button class="btn btn-info btn-circle btn" type="button">
-                                          <i class="far fa-comments text-white"></i>
-                                      </button>
-                                  </div>
-                                  <a href="javascript:void(0)" class="d-flex align-items-center"><img
-                                          src="assets/plugins/images/users/ritesh.jpg" alt="user-img" class="img-circle">
-                                      <div class="ms-2">
-                                          <span class="text-dark">Ritesh
-                                              Deshmukh <small class="d-block text-danger">Busy</small></span>
-                                      </div>
-                                  </a>
-                              </li>
-                              <li>
-                                  <div class="call-chat">
-                                      <button class="btn btn-success text-white btn-circle btn" type="button">
-                                          <i class="fas fa-phone"></i>
-                                      </button>
-                                      <button class="btn btn-info btn-circle btn" type="button">
-                                          <i class="far fa-comments text-white"></i>
-                                      </button>
-                                  </div>
-                                  <a href="javascript:void(0)" class="d-flex align-items-center"><img
-                                          src="assets/plugins/images/users/arijit.jpg" alt="user-img" class="img-circle">
-                                      <div class="ms-2">
-                                          <span class="text-dark">Arijit
-                                              Sinh <small class="d-block text-muted">Offline</small></span>
-                                      </div>
-                                  </a>
-                              </li>
-                              <li>
-                                  <div class="call-chat">
-                                      <button class="btn btn-success text-white btn-circle btn" type="button">
-                                          <i class="fas fa-phone"></i>
-                                      </button>
-                                      <button class="btn btn-info btn-circle btn" type="button">
-                                          <i class="far fa-comments text-white"></i>
-                                      </button>
-                                  </div>
-                                  <a href="javascript:void(0)" class="d-flex align-items-center"><img
-                                          src="assets/plugins/images/users/govinda.jpg" alt="user-img"
-                                          class="img-circle">
-                                      <div class="ms-2">
-                                          <span class="text-dark">Govinda
-                                              Star <small class="d-block text-success">online</small></span>
-                                      </div>
-                                  </a>
-                              </li>
-                              <li>
-                                <div class="call-chat">
-                                    <button class="btn btn-success text-white btn-circle btn" type="button">
-                                        <i class="fas fa-phone"></i>
-                                    </button>
-                                    <button class="btn btn-info btn-circle btn" type="button">
-                                        <i class="far fa-comments text-white"></i>
-                                    </button>
-                                </div>
-                                <a href="javascript:void(0)" class="d-flex align-items-center"><img
-                                        src="assets/plugins/images/users/hritik.jpg" alt="user-img" class="img-circle">
-                                    <div class="ms-2">
-                                        <span class="text-dark">John
-                                          Abraham<small class="d-block text-success">online</small></span>
-                                    </div>
-                                  </a>
-                              </li>
-                          </ul>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <footer class="footer text-center"> 2021 © Ample Admin brought to you by <a
-              href="https://www.wrappixel.com/">wrappixel.com</a>
-      </footer>
+    </div>
   </div>
 </div>
