--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -32,7 +32,7 @@
               <ul id="sidebarnav">
                   <!-- User Profile-->
                   <li class="sidebar-item pt-2">
-                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="<%= root_path" %>
+                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="<%= root_path %>"
                           aria-expanded="false">
                           <i class="far fa-clock" aria-hidden="true"></i>
                           <span class="hide-menu">Home</span>
@@ -77,17 +77,26 @@
       </div>
   </aside>
   <div class="page-wrapper">
-      <div class="page-breadcrumb bg-white">
-          <div class="row align-items-center">
-              <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
-                  <h4 class="page-title">Menu</h4>
-              </div>
-          </div>
-      </div>
       <div class="container-fluid">
           <div class="row">
               <div class="col-md-12">
                   <div class="card white-box p-0">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Menu</th>
+                                <th>Category</th>
+                                <th>Food item</th>
+                                <th colspan="3">Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody><% @menus.each do |menu| %>
+                            <tr>
+                                <td><%= menu.title %></td>
+                            </tr>
+                            <% end %>
+                        </tbody>
+                    </table>
                     <%= link_to "Add Menu", new_menu_path %>
                   </div>
               </div>
