--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,20 @@
-<div class="page-wrapper">
-  <div class="container-fluid">
-    <div class="col-md-12">
-      <div class="card white-box p-0">
-        <h2>Home page</h2>
+<div id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full" data-sidebar-position="absolute" data-header-position="absolute" data-boxed-layout="full">
+
+  <%= render 'shared/header' %>
+  <%= render 'shared/sidebar' %>
+
+  <div class="page-wrapper">
+    <div class="container-fluid">
+      <div class="col-md-12">
+        <div class="card white-box p-0">
+          <h2>Home page</h2>
+        </div>
       </div>
     </div>
   </div>
+  <div class="page-wrapper">
+
+  <%= render 'shared/footer' %>
+  
+</div>
 </div>
