gemfile.lock recreate

--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,109 +1,43 @@
-<div id="main-wrapper" data-layout="vertical" data-navbarbg="skin5" data-sidebartype="full"
-  data-sidebar-position="absolute" data-header-position="absolute" data-boxed-layout="full">
-  <header class="topbar" data-navbarbg="skin5">
-      <nav class="navbar top-navbar navbar-expand-md navbar-dark">
-          <div class="navbar-header" data-logobg="skin6">
-              <a class="nav-toggler waves-effect waves-light text-dark d-block d-md-none"
-                  href="javascript:void(0)"><i class="ti-menu ti-close"></i></a>
-          </div>
-          <div class="navbar-collapse collapse" id="navbarSupportedContent" data-navbarbg="skin5">
-              <ul class="navbar-nav ms-auto d-flex align-items-center">
-                  <li class=" in">
-                      <form role="search" class="app-search d-none d-md-block me-3">
-                          <input type="text" placeholder="Search..." class="form-control mt-0">
-                          <a href="" class="active">
-                              <i class="fa fa-search"></i>
-                          </a>
-                      </form>
-                  </li>
-                  <li>
-                     <span class="text-white font-medium"><% if employee_signed_in? %><%= current_employee.email %><% end %></span></a>
-                  </li>
-              </ul>
-          </div>
-      </nav>
-  </header>
+<div id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full" data-sidebar-position="absolute" data-header-position="absolute" data-boxed-layout="full">
 
-  <aside class="left-sidebar" data-sidebarbg="skin6">
-      <!-- Sidebar scroll-->
-      <div class="scroll-sidebar">
-          <!-- Sidebar navigation-->
-          <nav class="sidebar-nav">
-              <ul id="sidebarnav">
-                  <!-- User Profile-->
-                  <li class="sidebar-item pt-2">
-                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="<%= root_path %>"
-                          aria-expanded="false">
-                          <i class="far fa-clock" aria-hidden="true"></i>
-                          <span class="hide-menu">Home</span>
-                      </a>
-                  </li>
-                  <li class="sidebar-item">
-                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="<%= new_employee_session_path %>"
-                          aria-expanded="false">
-                          <i class="fa fa-user" aria-hidden="true"></i>
-                          <span class="hide-menu">Sign In</span>
-                      </a>
-                  </li>
-                  <li class="sidebar-item">
-                  <%= link_to destroy_employee_session_path, method: :delete , :class=> 'sidebar-link waves-effect waves-dark sidebar-link' do %>
-                          <i class="fas fa-sign-out-alt" aria-hidden="true"></i>
-                          <span class="hide-menu">Sign Out</span>
-                      <% end %>
-                  </li>
-                  <li class="sidebar-item">
-                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="<%= new_menu_path %>"
-                          aria-expanded="false">
-                          <i class="fas fa-columns" aria-hidden="true"></i>
-                          <span class="hide-menu">Menu</span>
-                      </a>
-                  </li>
-                  <li class="sidebar-item">
-                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="<%= new_category_path %>"
-                          aria-expanded="false">
-                          <i class="fab fa-readme" aria-hidden="true"></i>
-                          <span class="hide-menu">Category</span>
-                      </a>
-                  </li>
-                  <li class="sidebar-item">
-                      <a class="sidebar-link waves-effect waves-dark sidebar-link" href="<%= new_food_item_path %>"
-                          aria-expanded="false">
-                          <i class="fas fa-coffee" aria-hidden="true"></i>
-                          <span class="hide-menu">Food Item</span>
-                      </a>
-                  </li>
-              </ul>
-          </nav>
-      </div>
-  </aside>
+  <%= render 'shared/header' %>
+  <%= render 'shared/sidebar' %>
+
   <div class="page-wrapper">
-      <div class="container-fluid">
-          <div class="row">
-              <div class="col-md-12">
-                  <div class="card white-box p-0">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Menu</th>
-                                <th>Category</th>
-                                <th>Food item</th>
-                                <th colspan="3">Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody><% @menus.each do |menu| %>
-                            <tr>
-                                <td><%= menu.title %></td>
-                            </tr>
-                            <% end %>
-                        </tbody>
-                    </table>
-                    <%= link_to "Add Menu", new_menu_path %>
-                  </div>
-              </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card white-box p-0">
+            <table>
+              <thead>
+                <tr>
+                  <th>Menu</th>
+                  <th>Category</th>
+                  <th>Food item</th>
+                  <th colspan="3">Actions</th>
+                </tr>
+              </thead>
+              <tbody><% current_employee.resturant.menus.each do |menu| %>
+                <tr>
+                  <td><%= menu.title %></td>
+                  <td><%= @categories %></td>
+                  <td><%= @food_items %></td>
+                </tr>
+                <% end %>
+
+              </tbody>
+            </table>
+          
+            <%= link_to "Add Menu", new_menu_path %>
+
           </div>
+        </div>
       </div>
-      <footer class="footer text-center"> 2021 © Ample Admin brought to you by <a
-              href="https://www.wrappixel.com/">wrappixel.com</a>
-      </footer>
+    </div>
+  </div>
+  <div class="page-wrapper">
+
+    <%= render 'shared/footer' %>
+
   </div>
 </div>
